[gd_scene load_steps=67 format=3 uid="uid://cneggj8n4ec04"]

[ext_resource type="Script" path="res://ForestPlanet.gd" id="1_p1ogj"]
[ext_resource type="Texture2D" uid="uid://dnvqfgepdwsmt" path="res://forestPlanetNew.png" id="2_8jxsp"]
[ext_resource type="Texture2D" uid="uid://cwybp4w2bye7m" path="res://Space Background.png" id="2_vnt0f"]
[ext_resource type="Script" path="res://forestText.gd" id="4_4jpq5"]
[ext_resource type="PackedScene" uid="uid://djweeinlaawfb" path="res://scene_fade.tscn" id="5_bggax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_25ay0"]
atlas = ExtResource("2_8jxsp")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrd6r"]
atlas = ExtResource("2_8jxsp")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqsrr"]
atlas = ExtResource("2_8jxsp")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1xyr"]
atlas = ExtResource("2_8jxsp")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfoqh"]
atlas = ExtResource("2_8jxsp")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kck5d"]
atlas = ExtResource("2_8jxsp")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2v0s"]
atlas = ExtResource("2_8jxsp")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jegc3"]
atlas = ExtResource("2_8jxsp")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1f3px"]
atlas = ExtResource("2_8jxsp")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_et4sh"]
atlas = ExtResource("2_8jxsp")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_02oxe"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8owgn"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vve1u"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hemes"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_siabd"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0376x"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_w05wd"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_63vw4"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nbkt4"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0r3b"]
atlas = ExtResource("2_8jxsp")
region = Rect2(1900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_eayb3"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gwf7"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekmnr"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8gml"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1058"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2n63"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_364ut"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tsq7i"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqso5"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6c0q"]
atlas = ExtResource("2_8jxsp")
region = Rect2(2900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vchwl"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbctq"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kipq"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iax3n"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_impp8"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_li8f3"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xvsl"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2vcb"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6abg"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl265"]
atlas = ExtResource("2_8jxsp")
region = Rect2(3900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a00yi"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3yvh"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb6q8"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvgxc"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcyos"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_atudm"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_781oy"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1kw2"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vxhh"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc07r"]
atlas = ExtResource("2_8jxsp")
region = Rect2(4900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf13y"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p867o"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjdxr"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxlky"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jusf4"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u40fq"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3qxi1"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikdq3"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8m8n"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_niuu0"]
atlas = ExtResource("2_8jxsp")
region = Rect2(5900, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_uemjm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_25ay0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrd6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqsrr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1xyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfoqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kck5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2v0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jegc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f3px")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_et4sh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02oxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8owgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vve1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hemes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_siabd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0376x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w05wd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63vw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbkt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0r3b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eayb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gwf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekmnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8gml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1058")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2n63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_364ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tsq7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqso5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6c0q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vchwl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbctq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kipq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iax3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_impp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_li8f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xvsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2vcb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6abg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl265")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a00yi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3yvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb6q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvgxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcyos")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_atudm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_781oy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1kw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vxhh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc07r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf13y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p867o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjdxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxlky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jusf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u40fq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3qxi1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikdq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8m8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_niuu0")
}],
"loop": true,
"name": &"planetSpin",
"speed": 5.0
}]

[node name="ForestPlanet" type="Node"]
script = ExtResource("1_p1ogj")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(1.11111, 1.11111)
texture = ExtResource("2_vnt0f")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 175)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_uemjm")
animation = &"planetSpin"
frame_progress = 0.541321

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(320, 384)

[node name="forestText" type="Label" parent="Marker2D"]
offset_left = -111.0
offset_top = 6.0
offset_right = 113.0
offset_bottom = 66.0
vertical_alignment = 1
script = ExtResource("4_4jpq5")
metadata/_edit_use_anchors_ = true

[node name="sceneChangeTimer" type="Timer" parent="Marker2D/forestText"]
wait_time = 3.0

[node name="textTimer" type="Timer" parent="Marker2D/forestText"]
wait_time = 0.05

[node name="sceneFade" parent="." instance=ExtResource("5_bggax")]

[node name="ColorRect" parent="sceneFade/AnimationPlayer" index="0"]
offset_right = 1280.0
offset_bottom = 720.0

[connection signal="timeout" from="Marker2D/forestText/sceneChangeTimer" to="." method="_on_scene_change_timer_timeout"]
[connection signal="timeout" from="Marker2D/forestText/textTimer" to="Marker2D/forestText" method="_on_text_timer_timeout"]
[connection signal="animation_finished" from="sceneFade/AnimationPlayer" to="Marker2D/forestText" method="_on_animation_player_animation_finished"]

[editable path="sceneFade"]
